# necl-hn-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
src/necl_hn_mcp/: __init__.py  __main__.py  hn.py  server.py
