[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "necl-hn-mcp"
version = "0.1.0"
description = "Hacker News tools for AI agents. No API key required. MCP server by NeCL."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "NeCL", email = "neclcompany@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "hacker-news", "hn", "ai-agents", "necl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://neclco.com"
Repository = "https://github.com/adjacentai/necl-hn-mcp"
Issues = "https://github.com/adjacentai/necl-hn-mcp/issues"

[project.scripts]
necl-hn-mcp = "necl_hn_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/necl_hn_mcp"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/necl_hn_mcp",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    "smithery.yaml",
    "server.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

